<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">
    <item
        android:id="@+id/filterDialogFragment"
        android:icon="@drawable/ic_filter_black"
        android:title="@string/filter"
        app:showAsAction="always" />
</menu>